[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "coredumpy"
authors = [{name = "Tian Gao", email = "gaogaotiantian@hotmail.com"}]
description = "coredumpy saves your crash site for post-mortem debugging"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/gaogaotiantian/coredumpy"

[project.scripts]
coredumpy = "coredumpy:main"

[project.entry-points.pytest11]
coredumpy = "coredumpy:pytest_hook"

[tool.setuptools.dynamic]
version = {attr = "coredumpy.__version__"}
